closure: Fix error when closure debug enabled

We don't compile with GJS_VERBOSE_ENABLE_GCLOSURE defined too often, so
sometimes errors slip through.

https://bugzilla.gnome.org/show_bug.cgi?id=779692